Added answer to question 1 in hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "f) If $X$ is in P, then $Y$ is in P.\n",
     "\n",
-    "g) If $Y$ is in P, then $X$ is in P.\n"
+    "g) If $Y$ is in P, then $X$ is in P.\n",
+    "\n",
+    "We can only infer d and g because $X$ reduces to $Y$ means that if you had a black box to solve Y efficiently you could use it to solve X efficiently. X is therefore no harder than Y.\n"
    ]
   },
   {
@@ -55,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Two well-known $NP-complete$ problems are $3-SAT$ and $TSP$, the traveling salesman problem. The\n",
+    "3) Two well-known NP-complete problems are $3-SAT$ and $TSP$, the traveling salesman problem. The\n",
     "$2-SAT$ problem is a $SAT$ variant in which each clause contains at most two literals. $2-SAT$ is known to\n",
     "have a polynomial-time algorithm. Is each of the following statements true or false? Justify your\n",
     "answer\n",
@@ -64,7 +66,7 @@
     "\n",
     "b) If $P \\neq NP$, then $3-SAT \\leq_p 2-SAT$.  \n",
     "\n",
-    "c) If $P \\neq NP$, then no $NP-complete$ problem can be solved in polynomial time.  "
+    "c) If $P \\neq NP$, then no NP-complete problem can be solved in polynomial time.  "
    ]
   },
   {
@@ -72,7 +74,7 @@
    "metadata": {},
    "source": [
     "4) LONG-PATH is the problem of, given $(G, u, v, k)$ where $G$ is a graph, $u$ and $v$ vertices and $k$ an integer,\n",
-    "determining if there is a simple path in $G$ from $u$ to $v$ of length at least $k$. Show that $LONG-PATH$ is $NP-complete$.  "
+    "determining if there is a simple path in $G$ from $u$ to $v$ of length at least $k$. Show that LONG-PATH is NP-complete.  "
    ]
   },
   {
