Some markup changes to hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "g) If $Y$ is in P, then $X$ is in P.\n",
     "\n",
-    "We can only infer d and g because $X$ reduces to $Y$ means that if you had a black box to solve Y efficiently you could use it to solve X efficiently. X is therefore no harder than Y.\n"
+    "We can only infer d and g because $X$ reduces to $Y$ means that if you had a black box to solve $Y$ efficiently you could use it to solve $X$ efficiently. $X$ is therefore no harder than $Y$."
    ]
   },
   {
@@ -43,10 +43,14 @@
     "Clearly explain whether or not each of the following statements follows from that fact that\n",
     "COMPOSITE is in NP and SUBSET-SUM is NP-complete:\n",
     "\n",
-    "a) $SUBSET-SUM \\leq_p COMPOSITE$  \n",
+    "a) SUBSET-SUM $\\leq_p COMPOSITE$  \n",
     "\n",
-    "b) If there is an $O(n^3)$ algorithm for $SUBSET-SUM$, then there is a polynomial time\n",
+    "This statement violates the rules of the integers set in the problem above. An NP-complete problem does not reduce to a problem in NP.\n",
+    "\n",
+    "b) If there is an $O(n^3)$ algorithm for SUBSET-SUM, then there is a polynomial time\n",
     "algorithm for $COMPOSITE$.\n",
+    "\n",
+    "\n",
     "\n",
     "c) If there is a polynomial algorithm for $COMPOSITE$, then $P = NP$\n",
     "\n",
@@ -57,14 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Two well-known NP-complete problems are $3-SAT$ and $TSP$, the traveling salesman problem. The\n",
-    "$2-SAT$ problem is a $SAT$ variant in which each clause contains at most two literals. $2-SAT$ is known to\n",
+    "3) Two well-known NP-complete problems are 3-SAT and TSP, the traveling salesman problem. The\n",
+    "2-SAT problem is a SAT variant in which each clause contains at most two literals. 2-SAT is known to\n",
     "have a polynomial-time algorithm. Is each of the following statements true or false? Justify your\n",
     "answer\n",
     "\n",
-    "a) $3-SAT \\leq_p TSP$  \n",
+    "a) 3-SAT $\\leq_p TSP$  \n",
     "\n",
-    "b) If $P \\neq NP$, then $3-SAT \\leq_p 2-SAT$.  \n",
+    "b) If $P \\neq NP$, then 3-SAT $\\leq_p 2-SAT$.  \n",
     "\n",
     "c) If $P \\neq NP$, then no NP-complete problem can be solved in polynomial time.  "
    ]
