Slight change to question 2 answer text in hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "a) SUBSET-SUM $\\leq_p COMPOSITE$  \n",
     "\n",
-    "This statement does not hold true. The reason for this is because SUBSET-SUM is NP-complete which then allows us to reduce it to any other NP-complete problem. We do not know if COMPOSITE is also NP-complete which may reside in NP. Knowing these things we cannot say definitively that SUBSET-SUM can be reduced to COMPOSITE.\n",
+    "This statement does not hold true. The reason for this is because SUBSET-SUM is NP-complete which then allows us to reduce it to any other NP-complete problem. We do not know if COMPOSITE is also NP-complete only that it resides in NP. Knowing these things we cannot say definitively that SUBSET-SUM can be reduced to COMPOSITE.\n",
     "\n",
     "b) If there is an $O(n^3)$ algorithm for SUBSET-SUM, then there is a polynomial time\n",
     "algorithm for $COMPOSITE$.\n",
