More updates to question 1 and 3 for hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -17,15 +17,27 @@
     "\n",
     "a) If $Y$ is NP-complete then so is $X$.\n",
     "\n",
+    "This is not true because $X$ could just be in NP and not necessarily NP-complete.\n",
+    "\n",
     "b) If $X$ is NP-complete then so is $Y$.\n",
+    "\n",
+    "This is not true because $Y$ could be any of the classes harder than NP.\n",
     "\n",
     "c) If $Y$ is NP-complete and $X$ is in NP then $X$ is NP-complete.\n",
     "\n",
+    "This doesn't have to be true because $X$ could just be in NP.\n",
+    "\n",
     "d) If $X$ is NP-complete and $Y$ is in NP then $Y$ is NP-complete.\n",
+    "\n",
+    "This is true because $Y$ is definitely in NP and if $X$ is NP-complete then it follows that so is $Y$ because $Y$ is at least as hard as $X$.\n",
     "\n",
     "e) $X$ and $Y$ can't both be NP-complete\n",
     "\n",
+    "This is not true because there are scenarios where they can be as shown in part d directly above.\n",
+    "\n",
     "f) If $X$ is in P, then $Y$ is in P.\n",
+    "\n",
+    "This is false because \n",
     "\n",
     "g) If $Y$ is in P, then $X$ is in P.\n",
     "\n",
@@ -68,7 +80,7 @@
     "\n",
     "a) 3-SAT $\\leq_p TSP$  \n",
     "\n",
-    "b) If $P \\neq NP$, then 3-SAT $\\leq_p 2-SAT$.  \n",
+    "b) If $P \\neq NP$, then 3-SAT $\\leq_p$ 2-SAT.  \n",
     "\n",
     "c) If $P \\neq NP$, then no NP-complete problem can be solved in polynomial time.  "
    ]
@@ -104,21 +116,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
