Finalized question 1 for hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -37,9 +37,13 @@
     "\n",
     "f) If $X$ is in P, then $Y$ is in P.\n",
     "\n",
-    "This is false because \n",
+    "This is false because $Y$ is at least as hard as $X$ it could be in NP and still satisfy the condition set.\n",
     "\n",
     "g) If $Y$ is in P, then $X$ is in P.\n",
+    "\n",
+    "This is true because there is nothing easier than P therefore if $Y$ is in P then $X$ has to also be in P.\n",
+    "\n",
+    "In summary:\n",
     "\n",
     "We can only infer d and g because $X$ reduces to $Y$ means that if you had a black box to solve $Y$ efficiently you could use it to solve $X$ efficiently. $X$ is therefore no harder than $Y$."
    ]
