Added more answers to question 2 in hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -66,11 +66,15 @@
     "b) If there is an $O(n^3)$ algorithm for SUBSET-SUM, then there is a polynomial time\n",
     "algorithm for $COMPOSITE$.\n",
     "\n",
-    "\n",
+    "This is true because if SUBSET-SUM is in NP-complete therefore if SUBSET-SUM is solvable in polynomial time than all problems in NP-complete are solvable in polynomial time.\n",
     "\n",
     "c) If there is a polynomial algorithm for $COMPOSITE$, then $P = NP$\n",
     "\n",
-    "d) If $P \\neq NP$, then no problem in $NP$ can be solved in polynomial time."
+    "This is false because we are told that $COMPOSITE$ is within NP not necessarily within NP-complete therefore if $COMPOSITE$ can be solved in polynomial time than it could be a matter of $COMPOSITE$ being misclassified like the algorithm used to find prime numbers.\n",
+    "\n",
+    "d) If $P \\neq NP$, then no problem in $NP$ can be solved in polynomial time.\n",
+    "\n",
+    "This statement is true because it follows that if one problem in NP-complete is solvable in polynomial time than all problems in NP-complete and NP are solvable in polynomial time. The assertion stated just before is simply the negation of the statement in d."
    ]
   },
   {
