Added slide image to img and to hw 4 writeup, added more content to question 3

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -86,11 +86,20 @@
     "have a polynomial-time algorithm. Is each of the following statements true or false? Justify your\n",
     "answer\n",
     "\n",
-    "a) 3-SAT $\\leq_p TSP$  \n",
+    "a) 3-SAT $\\leq_p TSP$ \n",
     "\n",
-    "b) If $P \\neq NP$, then 3-SAT $\\leq_p$ 2-SAT.  \n",
+    "This statement is true because as observed in the lecture slides with the NP-completeness graph that 3-SAT can be reduced from itself to DIR-HAM-CYCLE to HAM-CYCLE to TSP. An image of the relevant slide is below:\n",
     "\n",
-    "c) If $P \\neq NP$, then no NP-complete problem can be solved in polynomial time.  "
+    "<img src=\"img/lecture_slide.jpg\" />\n",
+    "\n",
+    "Also both of these algorithms are NP-complete therefore they are both within NP so they can be reduced to each other so the inequality could be reversed and still be true.\n",
+    "\n",
+    "b) If $P \\neq NP$, then 3-SAT $\\leq_p$ 2-SAT. \n",
+    "\n",
+    "This statement is false because 2-SAT has a solution that runs in polynomial time and 3-SAT is NP-complete so it doesn't follow that $P \\neq NP$ because 2-SAT is within $P$ so if you could reduce 3-SAT to 2-SAT it would also be in $P$ but also still be within NP-complete which causes a contradiction with $P \\neq NP$.\n",
+    "\n",
+    "c) If $P \\neq NP$, then no NP-complete problem can be solved in polynomial time.  \n",
+    "\n"
    ]
   },
   {
