Added explanation to question 4 of hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -99,7 +99,8 @@
     "This statement is false because 2-SAT has a solution that runs in polynomial time and 3-SAT is NP-complete so it doesn't follow that $P \\neq NP$ because 2-SAT is within $P$ so if you could reduce 3-SAT to 2-SAT it would also be in $P$ but also still be within NP-complete which causes a contradiction with $P \\neq NP$.\n",
     "\n",
     "c) If $P \\neq NP$, then no NP-complete problem can be solved in polynomial time.  \n",
-    "\n"
+    "\n",
+    "This statement is true because by definition of NP-complete if at least one NP-complete problem can be solved in polynomial time then it follows that all NP-complete problems can be solved in polynomial time."
    ]
   },
   {
@@ -107,7 +108,11 @@
    "metadata": {},
    "source": [
     "4) LONG-PATH is the problem of, given $(G, u, v, k)$ where $G$ is a graph, $u$ and $v$ vertices and $k$ an integer,\n",
-    "determining if there is a simple path in $G$ from $u$ to $v$ of length at least $k$. Show that LONG-PATH is NP-complete.  "
+    "determining if there is a simple path in $G$ from $u$ to $v$ of length at least $k$. Show that LONG-PATH is NP-complete.  \n",
+    "\n",
+    "LONG-PATH is within NP since the verifying of the path is the yes-no which can be checked in polynomial time that it is a path and it is at least $k$ units long. LONG-PATH is also NP-complete because a Hamiltonian path is a special variant of LONG-PATH where we state the start, end node and $k$ equals the number of vertices in the path minus $1$.\n",
+    "\n",
+    "First we show that LONG-PATH is verifiable in polynomial time. Given a sequence of vertices that make up the path we can traverse that sequence in $O(n)$ time and check the adjacency list that the next vertex is within that list, thus showing that this porition belongs in NP. The second part is to reduce an NP-complete problem to a polynomial time variant. Hamiltonian cycle detection is NP-complete. If you take the graph passed into LONG-PATH and solve it using Hamiltonian path then all that would remain would be to check every vertex that results to make sure there exists an edge to the subsequent vertex. That process can be completed in $O(V + E)$ time."
    ]
   },
   {
@@ -123,11 +128,14 @@
     "of colors needed to color a given graph.\n",
     "\n",
     "a) State the graph-coloring problem as a decision problem K-COLOR. Show that your decision\n",
-    "problem is solvable in polynomial time if and only of the graph-coloring problem is solvable\n",
-    "in polynomial time.\n",
+    "problem is solvable in polynomial time if and only if the graph-coloring problem is solvable\n",
+    "in polynomial time.   \n",
+    "\n",
+    "The graph coloring problem can be stated as a decision problem whereby: Given a graph $G = (V,E)$ and a positive integer $k$ can the vertices of $G$ be $k$-colored such that no two adjacent vertices have the same color? The question posed is a simple yes-no. The problem can be broken into two parts, the actual graph coloring and the decision. The decision can be checked in $O(E)$ time because we would check all the edges to see if $u.color == v.color$ which can be determined in polynomial time. Therefore it follows that if graph coloring is polynomial the overall complexity will also be polynomial while if it is exponential than that will dominate thus supporting the conjecture above.\n",
     "\n",
     "b) It has been proven that 3-COLOR is NP-complete by using a reduction from SAT. Use the\n",
-    "fact that 3-COLOR is NP-complete to prove that 4-COLOR is NP-complete."
+    "fact that 3-COLOR is NP-complete to prove that 4-COLOR is NP-complete.  \n",
+    "\n"
    ]
   }
  ],
