Wrote solution for part b of question 5 for hw 4

--- a/week8/CS325_Homework_Four.ipynb
+++ b/week8/CS325_Homework_Four.ipynb
@@ -135,7 +135,8 @@
     "\n",
     "b) It has been proven that 3-COLOR is NP-complete by using a reduction from SAT. Use the\n",
     "fact that 3-COLOR is NP-complete to prove that 4-COLOR is NP-complete.  \n",
-    "\n"
+    "\n",
+    "We can construct a graph based on the inputted graph $G$ except we add one new node that is connected with the base graph. The action/reduction of copying over all the vertices, edges and adding/connecting the new node to the others will take $O(n)$ time. We can then solve the old portion of the new graph using 3-COLOR whereby if it is possible to do then we know that the new graph with the extra node can be 4-COLOR because the new extra node can be assigned the fourth color."
    ]
   }
  ],
